<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_10"
    android:orientation="vertical">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bk_grey_stroke_10"
            android:padding="@dimen/margin_5"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtHeatmap"
                style="@style/TextStyleNormalRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:textColor="@color/main_blue_color"
                android:text="@string/heatmap"
                android:textStyle="bold"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <View
                style="@style/TextStyleNormalRegular"
                android:layout_width="1dp"
                android:layout_height="@dimen/margin_20"
                android:background="@color/md_grey_400"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"/>
            <TextView
                android:id="@+id/txtStore"
                style="@style/TextStyleNormalRegular"
                android:layout_width="wrap_content"
                android:padding="@dimen/margin_10"
                android:layout_height="wrap_content"
                android:text="@string/stores"
                android:textColor="@color/md_grey_600"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <View
                style="@style/TextStyleNormalRegular"
                android:layout_width="1dp"
                android:layout_height="@dimen/margin_20"
                android:background="@color/md_grey_400"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"/>
            <TextView
                android:id="@+id/txtProduct"
                style="@style/TextStyleNormalRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_600"
                android:padding="@dimen/margin_10"
                android:text="@string/products"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <View
            style="@style/TextStyleNormalRegular"
            android:layout_width="1dp"
            android:layout_height="@dimen/margin_20"
            android:background="@color/md_grey_400"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"/>
            <TextView
                android:id="@+id/txtPost"
                style="@style/TextStyleNormalRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_600"
                android:padding="@dimen/margin_10"
                android:text="@string/post_story"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
            <View
                style="@style/TextStyleNormalRegular"
                android:layout_width="1dp"
                android:layout_height="@dimen/margin_20"
                android:background="@color/md_grey_400"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"/>
            <TextView
                android:id="@+id/txtAnalytics"
                style="@style/TextStyleNormalRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/md_grey_600"
                android:padding="@dimen/margin_10"
                android:text="@string/analytics_report"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                />
        </LinearLayout>
    </HorizontalScrollView>
    <seemesave.businesshub.utils.CustomViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>