<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#DDFCF8F8"
        app:cardCornerRadius="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_20"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/infoTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_me"/>

                    <TextView
                        android:id="@+id/title"
                        style="@style/TextStyleNormalRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:gravity="center"
                        android:text="@string/txt_my_portal"
                        android:textColor="@color/black_color"
                        android:textSize="15sp" />
                </LinearLayout>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_5"
                android:orientation="horizontal">
                <com.addisonelliott.segmentedbutton.SegmentedButtonGroup
                    android:id="@+id/buttonGroup_draggable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:elevation="1dp"
                    android:background="@color/white_color"
                    app:borderColor="@color/md_grey"
                    app:borderWidth="1dp"
                    app:draggable="true"
                    app:position="0"
                    app:radius="10dp"
                    app:selectedButtonRadius="@dimen/margin_10"
                    app:selectedBackground="@color/main_blue_color"
                    app:selectionAnimationDuration="500">
                    <com.addisonelliott.segmentedbutton.SegmentedButton
                        android:id="@+id/btnMine"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        app:selectedTextColor="@color/white_color"
                        app:text="@string/txt_mine"
                        app:textColor="@color/md_grey_800"
                        app:textSize="14sp" />

                    <com.addisonelliott.segmentedbutton.SegmentedButton
                        android:id="@+id/btnAgent"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        app:selectedTextColor="@color/white_color"
                        app:text="@string/txt_agent"
                        app:textColor="@color/md_grey_800"
                        app:textSize="14sp" />

                </com.addisonelliott.segmentedbutton.SegmentedButtonGroup>
            </LinearLayout>
            <TextView
                style="@style/TextStyleNormalRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_choose_portal"
                android:layout_marginTop="@dimen/margin_7"
                android:textColor="@color/main_blue_color"
                />
            <LinearLayout
                android:id="@+id/lytVendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:orientation="vertical">
                <TextView
                    style="@style/TextStyleNormalRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_vendor"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvVendor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lytSupplier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:orientation="vertical">
                <TextView
                    style="@style/TextStyleNormalRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_supplier"
                    />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSupplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lytSelectedPortal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:visibility="gone"
                android:orientation="vertical">
                <TextView
                    style="@style/TextStyleNormalRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_work_on"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_5"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgPortalLogo"
                        android:layout_width="@dimen/margin_35"
                        android:layout_height="@dimen/margin_35"
                        android:src="@drawable/ic_store_default"
                        app:civ_border_color="@color/md_grey_400"
                        app:civ_border_width="1dp" />
                    <TextView
                        android:id="@+id/txtPortalName"
                        style="@style/TextStyleNormalRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_vendor"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_10"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:gravity="center"
                android:elevation="@dimen/margin_1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:background="@drawable/bk_blue_rect_5">
                <TextView
                    style="@style/TextStyleNormalRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_7"
                    android:gravity="center"
                    android:textColor="@color/white_color"
                    android:text="@string/txt_ok"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>